--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,14 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
+@plugin "daisyui" {
+  themes: light --default, dark --prefersdark, cupcake;
+}
+
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+
+
+html{
+  scroll-behavior: smooth;
+  overflow-y: scroll;
+}
